--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
-/*Тихоненко*/
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     background-color: #969696;
+    overflow-y: auto;
 }
 
 header {
@@ -15,18 +15,17 @@ header {
     width: 100px;
 }
 
-
 nav ul li {
-    display: inline; /* Горизонтальное расположение*/
+    display: inline;
     margin: 15px;
 }
 
 nav ul li a {
-    text-decoration: none; /*убираем подчеркивание*/
+    text-decoration: none;
     color: #101010;
 }
 
-/* Секция с приветствием */
+
 section.head {
     background-color: #595959;
     padding: 20px;
@@ -44,7 +43,7 @@ section.head p {
 
 section.head .kat-button {
     padding: 10px 20px;
-    background-color:  #f5af53;
+    background-color: #f5af53;
     color: #000000;
     text-decoration: none;
     border-radius: 10px;
@@ -55,8 +54,8 @@ section.head .kat-button:hover {
     background-color: #c68024;
 }
 
-/* Боковая панель */
 aside {
+    position: relative;
     width: 25%;
     float: left;
     padding: 20px;
@@ -66,11 +65,11 @@ aside {
 }
 
 aside ul {
-    list-style: none; 
+    list-style: none;
 }
 
 aside ul li {
-    margin-bottom: 10px; /*отступы между строчками */
+    margin-bottom: 10px;
 }
 
 aside ul li a {
@@ -83,10 +82,10 @@ aside ul li a:hover {
     text-decoration: underline;
 }
 
-/*Аббасова*/
 /* Основной контент */
 article {
     width: 75%;
+    position: relative;
     float: left;
     padding: 20px;
     box-sizing: border-box;
@@ -97,7 +96,6 @@ article h3 {
     font-size: 22px;
 }
 
-
 .book {
     width: 30%;
     float: left;
@@ -105,7 +103,6 @@ article h3 {
     margin-bottom: 20px;
     text-align: center;
 }
-
 
 .book img {
     width: 300px;
@@ -127,5 +124,134 @@ footer {
     clear: both;
     background-color: #fbc884;
     padding: 20px;
-    text-align: left; 
+    text-align: left;
+}
+
+@media (max-width: 767px) {
+    header {
+        padding: 10px 5px;
+    }
+
+    .logo img {
+        width: 80px;
+    }
+
+    nav ul li {
+        margin: 10px 5px;
+    }
+
+    section.head {
+        padding: 15px;
+    }
+
+    section.head h2 {
+        font-size: 24px;
+    }
+
+    section.head p {
+        font-size: 16px;
+    }
+
+    section.head .kat-button {
+        padding: 8px 16px;
+        font-size: 14px;
+    }
+
+    aside,
+    article {
+        width: 100%;
+        padding: 15px;
+        float: none;
+    }
+
+    aside ul li {
+        margin: 0 10px;
+    }
+
+    .book {
+        width: auto;
+        float: none;
+        margin-right: 15px;
+    }
+
+    .book img {
+        width: 100%;
+    }
+
+    .book h4 {
+        font-size: 16px;
+    }
+
+    .book p {
+        font-size: 12px;
+    }
+
+    footer {
+        padding: 15px;
+        text-align: center;
+    }
+}
+
+
+@media (min-width: 769px) and (max-width: 1366px) {
+    header {
+        padding: 15px;
+    }
+
+    .logo img {
+        width: 90px;
+    }
+
+    nav ul li {
+        margin: 10px 10px;
+    }
+
+    section.head {
+        padding: 20px;
+    }
+
+    section.head h2 {
+        font-size: 26px;
+    }
+
+    section.head p {
+        font-size: 17px;
+    }
+
+    section.head .kat-button {
+        padding: 10px 20px;
+        font-size: 15px;
+    }
+
+    aside,
+    article {
+        width: 100%;
+        float: none;
+        padding: 15px;
+    }
+
+    .book {
+        width: 100%;
+        float: none;
+        margin: 0 0 20px 0;
+        text-align: center;
+    }
+
+    .book img {
+        width: 100%;
+        max-width: none;
+    }
+
+    .book h4 {
+        font-size: 18px;
+    }
+
+    .book p {
+        font-size: 14px;
+    }
+
+    footer {
+        padding: 20px;
+        text-align: center;
+    }
 }
