--- a/dz2/css/styles.css
+++ b/dz2/css/styles.css
@@ -3,6 +3,15 @@ body {
     color: #2b3939;
     margin: 0;
     padding: 0;
+    background-color: #e5e5e5;
+}
+
+header {
+    position: fixed;
+    width: 100%;
+    background-color: white; 
+    z-index: 1000;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1); 
 }
 
 .head {
@@ -65,7 +74,7 @@ nav ul li a:hover::after {
 
 .info {
     display: grid;
-    position: relative; /* Для z-index */
+    position: relative;
 }
 
 .info img[alt="background"] {
@@ -73,6 +82,7 @@ nav ul li a:hover::after {
     grid-column: 1 / -1;
     grid-row: 1 / -1;
     z-index: 1; 
+    margin-top: 80px;
 }
 
 .overlay-box {
@@ -89,7 +99,7 @@ nav ul li a:hover::after {
     flex-direction: column;
     justify-content: center;
     margin: 40px;
-    margin-top: 150px;
+    margin-top: 200px;
     z-index: 2;
 }
 
@@ -117,8 +127,138 @@ nav ul li a:hover::after {
 }
 
 
-@media (max-width: 600px) {
 
+
+
+h3 {
+    text-align: center;
+    font-weight: bold;
+    font-size: 30px;
+   /* margin-top: 150px; */
+    margin-bottom: 0;
+}
+
+.contact-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 100px;
+
+}
+
+.contact-info {
+    padding: 20px;
+    text-align: center; 
+}
+
+.contact-info h4 {
+    font-weight: normal;
+    font-size: 18px;
+    margin: 10px;
+}
+
+.contact-info p{
+    margin: 10px;
+}
+
+.contact-details {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.contact-details li {
+    margin-bottom: 5px;
+    font-size: 16px;
+}
+
+.contact-details a {
+    color:  #7ca397;
+    text-decoration: none;
+}
+
+.contact-details img {
+    width: 15px;
+    height: 15px;
+}
+
+
+form {
+    width: 50%;
+    padding: 20px;
+}
+
+.form-row {
+    display: flex; 
+    justify-content: space-between; 
+    gap: 10px; 
+}
+
+.form-group {
+    flex: 1; 
+}
+
+.form-group label {
+    display: block;
+    margin-bottom: 10px;
+}
+
+.form-group input,
+.form-group textarea {
+    width: 100%;
+    font-size: 16px;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box; 
+    font-family: 'Trebuchet MS', Helvetica, sans-serif;
+    color: #686868;
+    box-shadow: inset 0 2px 2px rgba(0, 0, 0, 0.1);
+    resize: none; /*блокирует растягивание полей*/
+    transition: box-shadow 0.3s ease-in-out;
+}
+
+.form-group input:focus,
+.form-group textarea:focus {
+    outline: none;
+}
+
+
+.form-group button {
+    width: 100%;
+    margin-top: 8px;
+    background-color: #a0b5b5;
+    border: none;
+    padding: 14px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.form-group button:hover {
+    background-color: #8aa3a3;
+}
+
+
+footer {
+    background-color: #ffffff;
+    width: 100%;
+    padding: 40px 0;
+    text-align: center;
+    font-size: 14px;
+}
+
+.footer-nav ul {
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto 20px auto;
+}
+
+.footer-nav a:hover {
+    text-decoration: none;
+}
+
+
+@media (max-width: 600px) {
     .head {
         flex-direction: column; 
         align-items: center;
@@ -141,6 +281,7 @@ nav ul li a:hover::after {
         justify-content: center; 
         align-items: center;
         height: 60vh; 
+        
     }
     
     .info img[alt="background"] {
@@ -149,14 +290,19 @@ nav ul li a:hover::after {
         height: 100%;
         object-fit: cover;
         z-index: -1;
+        margin-top: 400px;
     }
     
     .overlay-box {
         width: 80%; 
         max-width: 500px; 
         margin: 0 auto; 
+        margin-top: 400px;
         padding: 20px;
         text-align: center; 
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     
     .overlay-box h2 {
@@ -166,6 +312,39 @@ nav ul li a:hover::after {
     .overlay-box p {
         font-size: 18px;
     }
+
+    form {
+        width: 100%;
+    }
+    .form-row {
+        display: flex;
+        flex-direction: column; 
+    }
+
+    .form-group button {
+        width: 100%;
+    }
+
+    h3{
+        margin-top:250px;
+    }
+
+    .contact-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 40px 20px;
+        max-width: 800px;
+        margin: 0 auto;
+        margin-top: -20px;
+    } 
+
+    footer{
+        width: 100%;
+    }
+  
+    
 }    
 
 
@@ -186,6 +365,7 @@ nav ul li a:hover::after {
     nav ul li a {
         font-size: 24px; 
     }
+    
 
     .info {
         display: flex;
@@ -204,10 +384,14 @@ nav ul li a:hover::after {
     
     .overlay-box {
         width: 80%; 
-        max-width: 900px; 
+        max-width: 500px; 
         margin: 0 auto; 
+        margin-top: 400px;
         padding: 20px;
         text-align: center; 
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     
     .overlay-box h2 {
@@ -216,5 +400,30 @@ nav ul li a:hover::after {
     
     .overlay-box p {
         font-size: 18px;
+    }
+    form {
+        width: 100%;
+    }
+    .form-row {
+        display: flex;
+        flex-direction: column; 
+    }
+
+    .form-group button {
+        width: 100%;
+    }
+
+    h3{
+        margin-top:80px;
+    }
+    .contact-container {
+        display: flex;
+        flex-direction: column; 
+        align-items: center;
+        text-align: center;
+        padding: 40px 20px;
+        max-width: 800px;
+        margin: 0 auto;
+        margin-top: -20px;
     }
 }
